sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:39: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return getNombreBases()*getNombrePositions()
  ^SelectBaseball:43: error: '=' expected but '(' found.
def index2pos(index:Int):Array[Int](2) = {
                                   ^SelectBaseball:49: error: illegal start of simple expression
def pos2index(pos:Array[Int](2)):Int = {
^SelectBaseball:49: error: ')' expected but '(' found.
def pos2index(pos:Array[Int](2)):Int = {
                            ^SelectBaseball:49: error: '=' expected but ')' found.
def pos2index(pos:Array[Int](2)):Int = {
                               ^SelectBaseball:181: error: illegal start of simple expression
}
^